# local-coder-5090

./: .env.example  .gitignore  CLAUDE.md  LOCALCODER.md  README.md  install-service.ps1  pyproject.toml
.github/workflows/: ci.yml
config/: hermes_local_coder_fragment.yaml  local_coder_provider.json
local_coder/: __init__.py
local_coder_5090.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp/arcade/: server.py
ops/: daily_control_win.py  daily_services_win.json
scripts/: local_coder_browser.py  local_coder_cli.py
tests/ops/: test_local_coder_browser.py
tests/unit/: test_pure_functions.py
